# coding-agent-insights

./: .commitlintrc.yml  .gitignore  .versionrc  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVOPS.md  DEVOPS_QUICKSTART.md  DOCUMENTATION_SUMMARY.md  GIT_WORKFLOW.md  Makefile  PROJECT.md  README.md  RELEASE.md  TESTING.md  codecov.yml  renovate.json
.cargo/: config.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  labeler.yml  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot.yml  labeler.yml  pr.yml  release.yml  stale.yml
benches/: Cargo.toml  format_bench.rs  query_bench.rs
benches/src/: format_bench.rs  lib.rs  query_bench.rs
crates/cai-cli/: CLAUDE.md  Cargo.toml  README.md
crates/cai-cli/src/: config.rs  main.rs
crates/cai-core/: CLAUDE.md  Cargo.toml  README.md
crates/cai-core/src/: lib.rs
crates/cai-core/tests/: lib_tests.rs
crates/cai-files/: CLAUDE.md  Cargo.toml
crates/cai-files/src/: filter.rs  lib.rs  loader.rs  scanner.rs
crates/cai-ingest/: CLAUDE.md  Cargo.toml  README.md
crates/cai-ingest/src/: claude.rs  codex.rs  error.rs  git.rs  ingest.rs  lib.rs
crates/cai-output/: CLAUDE.md  Cargo.toml  README.md
crates/cai-output/src/: formats.rs  formatter.rs  lib.rs
crates/cai-plugin/: CLAUDE.md  Cargo.toml  README.md
crates/cai-plugin/src/: lib.rs
crates/cai-query/: CLAUDE.md  Cargo.toml  README.md
crates/cai-query/src/: error.rs  eval.rs  executor.rs  functions.rs  lib.rs  parser.rs
crates/cai-storage/: CLAUDE.md  Cargo.toml  README.md
crates/cai-storage/benches/: storage_bench.rs
crates/cai-storage/src/: duckdb.rs  lib.rs  sqlite.rs
crates/cai-storage/tests/: memory_storage_tests.rs
crates/cai-tui/: CLAUDE.md  Cargo.toml  README.md
crates/cai-tui/src/: app.rs  event.rs  lib.rs  ui.rs
crates/cai-web/: CLAUDE.md  Cargo.toml  README.md
crates/cai-web/src/: api.rs  dashboard.html  handlers.rs  lib.rs  server.rs
docs/: LIVE_READER_DESIGN.md
homebrew/: README.md  cai.rb
npm/cli/: .gitignore  .npmignore  README.md  index.js  package.json
npm/cli/scripts/: install.js  uninstall.js
plugin/: marketplace.json
plugin/commands/: ingest.json  query.json  stats.json  tui.json  web.json
plugin/hooks/: session.json
plugin/skills/: ingest.md  query.md  stats.md  tui.md  web.md
schemas/: marketplace-v1.json
scripts/: build.sh  bump-version.sh  gen-release-notes.sh  npm-publish.sh  release.sh  test.sh  update-homebrew.sh
tests/: Cargo.toml
tests/fixtures/: claude_conversation.json  codex_history.jsonl  git_log.txt
tests/src/: fixtures.rs  helpers.rs  integration.rs  lib.rs
tests/src/e2e/: cli_test.rs  ingest_test.rs  mod.rs  query_test.rs
