[package]
name = "cai-benches"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
doctest = false

[[bench]]
name = "query_bench"
path = "query_bench.rs"
harness = false

[[bench]]
name = "format_bench"
path = "format_bench.rs"
harness = false

[dependencies]
cai-core = { path = "../crates/cai-core" }
cai-storage = { path = "../crates/cai-storage" }
cai-output = { path = "../crates/cai-output" }

divan = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
