[package]
name = "cai-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
cai-core = { path = "../crates/cai-core" }
cai-storage = { path = "../crates/cai-storage" }
cai-output = { path = "../crates/cai-output" }

tokio = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
