[package]
name = "cai-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "cai"
path = "src/main.rs"

[dependencies]
cai-core = { path = "../cai-core" }
cai-storage = { path = "../cai-storage" }
cai-tui = { path = "../cai-tui" }
cai-web = { path = "../cai-web", optional = true }

clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
colored = { workspace = true }

[features]
default = []
web = ["dep:cai-web"]
