[package]
name = "cai-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for Coding Agent Insights"
documentation = "https://docs.rs/cai-cli"

[[bin]]
name = "cai"
path = "src/main.rs"

[dependencies]
cai-core = { path = "../cai-core", version = "0.1.0" }
cai-storage = { path = "../cai-storage", version = "0.1.0" }
cai-ingest = { path = "../cai-ingest", version = "0.1.0" }
cai-query = { path = "../cai-query", version = "0.1.0" }
cai-output = { path = "../cai-output", version = "0.1.0" }
cai-tui = { path = "../cai-tui", version = "0.1.0" }
cai-web = { path = "../cai-web", version = "0.1.0", optional = true }

clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
colored = { workspace = true }
chrono = { workspace = true }
config = "0.15"
dirs = "5.0"
toml = "0.9"
serde = { workspace = true }

[features]
default = []
web = ["dep:cai-web"]
