[package]
name = "cai-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core types and utilities for Coding Agent Insights"
documentation = "https://docs.rs/cai-core"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
proptest = { workspace = true }
