[package]
name = "cai-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cai-core = { path = "../cai-core", version = "0.1.0" }
cai-storage = { path = "../cai-storage", version = "0.1.0" }

thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
git2 = { workspace = true }
tracing = { workspace = true }
dirs = "5.0"
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3.13"
dirs = "5.0"
