[package]
name = "cai-output"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cai-core = { path = "../cai-core", version = "0.1.0" }

serde_json = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
chrono = { workspace = true }
