[package]
name = "cai-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cai-core = { path = "../cai-core" }

serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen = "0.36"
