[package]
name = "cai-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cai-core = { path = "../cai-core", version = "0.1.0" }

serde_json = { workspace = true }
