[package]
name = "cai-query"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cai-core = { path = "../cai-core" }
cai-storage = { path = "../cai-storage" }

thiserror = { workspace = true }
sqlparser = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
