[package]
name = "cai-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cai-core = { path = "../cai-core" }

tokio = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "storage_bench"
harness = false
