[package]
name = "cai-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cai-core = { path = "../cai-core" }
cai-storage = { path = "../cai-storage" }
cai-query = { path = "../cai-query" }
cai-output = { path = "../cai-output" }

thiserror = { workspace = true }
anyhow = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
