[package]
name = "cai-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cai-core = { path = "../cai-core" }
cai-storage = { path = "../cai-storage" }

ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
