[package]
name = "cai-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Terminal UI for Coding Agent Insights"
documentation = "https://docs.rs/cai-tui"

[dependencies]
cai-core = { path = "../cai-core", version = "0.1.0" }
cai-storage = { path = "../cai-storage", version = "0.1.0" }

ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
