[package]
name = "cai-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cai-core = { path = "../cai-core" }
cai-query = { path = "../cai-query" }
cai-output = { path = "../cai-output" }

thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
