[package]
name = "cai-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cai-core = { path = "../cai-core" }
cai-query = { path = "../cai-query" }
cai-storage = { path = "../cai-storage" }

thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
tracing = { workspace = true }
